[tool.poetry]
name = "dynamic-context-compression"
version = "0.1.0"
description = ""
authors = ["Jeswin Kumar <jeswinpk@agilehead.com>"]
readme = "README.md"
packages = [{include = "dynamic_context_compression", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
torch = ">=2.6.0,<3.0.0"
transformers = ">=4.48.2,<5.0.0"
accelerate = ">=1.3.0,<2.0.0"
bitsandbytes = ">=0.45.1,<0.46.0"
python-dotenv = ">=1.0.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-sugar = "^1.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]
addopts = "-v" 

  [build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"